# api-ads

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/: codecov.yml
.github/workflows/: ci.yaml  test.yaml
benches/: graphql.rs
crates/api-core/: Cargo.toml  README.md  build.rs
crates/api-core/src/: lib.rs
crates/api-core/src/engine/: mutation.rs  query.rs
crates/api-core/src/proto/: category.proto
crates/api-core/src/tests/: mod.rs
crates/api-db/: Cargo.toml  README.md
crates/api-db/src/: lib.rs
crates/api-db/src/driver/: cache_keys.rs  mod.rs
crates/api-db/src/driver/mutation/: mod.rs
crates/api-db/src/driver/query/: mod.rs
crates/api-db/src/driver/redis/: mod.rs
crates/api-db/src/errors/: mod.rs
crates/api-db/src/tests/: mod.rs
crates/api-interface/: Cargo.toml  README.md
crates/api-interface/src/: lib.rs
crates/api-interface/src/errors/: schema.rs
crates/api-interface/src/mutation/: category.rs  mod.rs
crates/api-interface/src/query/: category.rs  mod.rs  relay.rs
crates/api-interface/src/subscription/: category.rs  mod.rs
crates/api-interface/src/tests/: mod.rs
crates/api-utils/: Cargo.toml
crates/api-utils/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/obsrv/: log.rs  mod.rs
crates/server/src/routes/: mod.rs
