[package]
name = "api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.2.0"
serde = { version = "1.0.188", features = ["derive"] }

[build-dependencies]
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"

[dev-dependencies]
serde_json = "1.0.107"
