[package]
name = "api-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core = { version = "0.1.0", path = "../api-core" }
api-utils = { version = "0.1.0", path = "../api-utils" }
async-trait = "0.1.73"
lazy_static = "1.4.0"
surrealdb = "1.0.0"
thiserror = "1.0.49"
tracing = "0.1.37"
