[package]
name = "api-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core = { version = "0.1.0", path = "../api-core" }
api-utils = { version = "0.1.0", path = "../api-utils" }
async-trait = "0.1.73"
bb8 = "0.8.1"
bb8-redis = "0.13.1"
bincode = "1.3.3"
futures-util = "0.3.28"
lazy_static = "1.4.0"
once_cell = "1.18.0"
redis = { version = "0.23.3", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.188", features = ["derive"] }
surrealdb = "1.0.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", optional = true }
tracing = "0.1.40"

[features]
default = []
tokio = ["dep:tokio"]

[dev-dependencies]
dotenvy = "0.15.7"
fake = { version = "2.8.0", features = ["uuid"] }
