[package]
name = "api-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core = { version = "0.1.0", path = "../api-core", features = ["async-graphql"] }
api-db = { version = "0.1.0", path = "../api-db", features = ["tokio"] }
async-graphql = { version = "6.0.7", default-features = false, features = ["tracing", "opentelemetry", "playground", "uuid"] }
async-stream = "0.3.5"
base64 = "0.21.4"
futures-channel = "0.3.28"
futures-timer = "3.0.2"
futures-util = "0.3.28" 
once_cell = "1.18.0"
slab = "0.4.9"
thiserror = "1.0.49"
tracing = "0.1.37"

[dev-dependencies]
dotenvy = "0.15.7"
fake = "2.8.0"
tokio = "1.32.0"
