[package]
name = "server-ads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
sentry = { version = "0.31.7", default-features = false, features = ["reqwest", "rustls", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
