[package]
name = "server-ads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
api-interface = { version = "0.1.0", path = "../api-interface" }
api-utils = { version = "0.1.0", path = "../api-utils" }
async-graphql-axum = "6.0.7"
axum = { version = "0.6.20", features =["ws"] }
dotenvy = "0.15.7"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13.0"
opentelemetry-semantic-conventions = "0.12.0"
sentry = { version = "0.32.1", default-features = false, features = ["reqwest", "rustls", "tracing"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
